--- a/static/css/message-page.css
+++ b/static/css/message-page.css
@@ -286,7 +286,7 @@
   padding: 4px;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
-  border-top: 1px solid var(--wcag-border-color);
+  border-top: 1px solid var(--wcag-disable-color);
   white-space: nowrap;
 }
 
