feat: add search box - search friend

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -48,9 +48,14 @@
   --btn-primary-color: #50B83C;
   --btn-primary-hover-color: #5DC748;
   --btn-primary-press-color: #118044;
+  --btn-primary-disabled-color: #7ebe71;
   --btn-icon-color: #E6F1E4;
   --btn-danger-color: #E81E1E;
+  --btn-danger-hover-color: #ef4848;
+  --btn-danger-press-color: #bf1a1a;
+  --btn-danger-disabled-color: #eb7272;
 
+  /* block variable */
   --block-border-radius: 8px;
   --container-padding: 20px;
 
@@ -62,6 +67,8 @@
   --chat-box-footer-height: 56px;
   --chat-box-content-height: calc(100vh - 2*var(--container-padding) - var(--chat-box-header-height) - var(--chat-box-footer-height));
 
+  --header-thumbnail-height: 60px;
+  --navbar-height: calc(100% - var(--header-thumbnail-height) - 40px);
   --chat-message-thumbnail: 32px;
 }
 
@@ -79,6 +86,10 @@ html {
 body {
   background-color: var(--wcag-background-color);
   color: #000000;
+}
+
+button {
+  outline: unset;
 }
 
 .hide {
