--- a/static/css/message-page.css
+++ b/static/css/message-page.css
@@ -22,8 +22,12 @@
   border-radius: var(--block-border-radius);
 }
 
+.header-nav {
+  height: var(--navbar-height);
+}
+
 .header-nav ul {
-  height: 70vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -72,9 +76,11 @@
 
 /* header end */
 
-.thumnail {
-  width: 100px;
-  margin-bottom: 1rem;
+.thumbnail {
+  width: var(--header-thumbnail-height);
+  margin: 1rem auto;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
 .toolbar {
@@ -85,6 +91,8 @@
   flex-direction: column;
   gap: 0.7rem;
 }
+
+/* search */
 
 .search {
   position: relative;
@@ -106,6 +114,59 @@
   top: 50%;
   transform: translateY(-50%);
 }
+
+.search .search-btn:focus+.search-result-container {}
+
+.search .search-result-container:hover {}
+
+.search .search-result-container {
+  display: block;
+  position: absolute;
+  width: 100%;
+  top: calc(100% + 8px);
+  left: 0;
+  z-index: 1000;
+  padding: 0 8px;
+
+  background-color: var(--wcag-white-color);
+  border-radius: var(--block-border-radius);
+  box-shadow: 0px 2px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.search .search-result-container::before {
+  content: "";
+  width: 100%;
+  height: 8px;
+  position: absolute;
+  top: -8px;
+  left: 0;
+}
+
+.search .search-data {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 8px;
+  flex-wrap: nowrap;
+}
+
+.search .search-data .search-message {
+  flex: 1;
+  text-align: center;
+}
+
+.search .search-data .search-user__thumbnail img {
+  height: 36px;
+  border-radius: 50%;
+}
+
+.search .search-data .search-user__fullName {}
+
+.search .search-data .search-user__addFriendBtn {}
+
+/* group */
 
 .groups {
   background: #ffffff;
@@ -375,6 +436,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-bottom: 1px solid var(--wcag-border-color);
 }
 
 .option img {
