feat: contact api

--- a/static/css/message-page.css
+++ b/static/css/message-page.css
@@ -190,27 +190,33 @@
   padding-right: 1rem;
 }
 
-.item {
+.chat-contact-item {
   display: flex;
   align-items: center;
   column-gap: 1rem;
 }
 
-.groups .item,
-.recents .item {
+.chat-contact-item img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+.groups .chat-contact-item,
+.recents .chat-contact-item {
   padding: 0.5rem;
 }
 
-.groups .item:hover {
+.groups .chat-contact-item:hover {
   background-color: rgb(218, 218, 218);
   cursor: pointer;
 }
 
-.groups .item:not(:last-child) {
+.groups .chat-contact-item:not(:last-child) {
   border-bottom: 1px solid rgba(0, 0, 0, 0.25);
 }
 
-.recents .item:not(:last-child) {
+.recents .chat-contact-item:not(:last-child) {
   border-bottom: 1px solid rgba(0, 0, 0, 0.25);
 }
 
@@ -427,11 +433,6 @@
 
 .chat-box-footer__icon .m-icon-btn:not(:last-child) {
   margin-right: 10px;
-}
-
-.header-nav img,
-.item img {
-  width: 30px;
 }
 
 .option {
