--- a/static/css/message-page.css
+++ b/static/css/message-page.css
@@ -190,33 +190,33 @@
   padding-right: 1rem;
 }
 
-.chat-contact-item {
+.item {
   display: flex;
   align-items: center;
   column-gap: 1rem;
 }
 
-.chat-contact-item img {
+.item img {
   width: 40px;
   height: 40px;
   border-radius: 50%;
 }
 
-.groups .chat-contact-item,
-.recents .chat-contact-item {
+.groups .item,
+.recents .item {
   padding: 0.5rem;
 }
 
-.groups .chat-contact-item:hover {
+.groups .item:hover {
   background-color: rgb(218, 218, 218);
   cursor: pointer;
 }
 
-.groups .chat-contact-item:not(:last-child) {
+.groups .item:not(:last-child) {
   border-bottom: 1px solid rgba(0, 0, 0, 0.25);
 }
 
-.recents .chat-contact-item:not(:last-child) {
+.recents .item:not(:last-child) {
   border-bottom: 1px solid rgba(0, 0, 0, 0.25);
 }
 
@@ -239,7 +239,7 @@
 }
 
 .chat {
-  display: none;
+  /* display: none; */
 }
 
 .chat-box {
@@ -421,9 +421,7 @@
 }
 
 
-.chat-box__footer .chat-box__input::placeholder {
-  line-height: 40px;
-}
+.chat-box__footer .chat-box__input::placeholder {}
 
 .chat-box__footer .chat-box-footer__icon {
   right: 8px;
