--- a/static/css/components/scrollbar.css
+++ b/static/css/components/scrollbar.css
@@ -1,4 +1,5 @@
-:root {}
+/* :root {
+}
 
 ::-webkit-scrollbar-thumb {
   background-color: var(--wcag-secondary-text-color);
@@ -9,4 +10,4 @@
 
 ::-webkit-scrollbar {
   width: 8px;
-}
+} */
