--- a/static/css/message-page.css
+++ b/static/css/message-page.css
@@ -76,14 +76,6 @@
 
 /* header end */
 
-.thumbnail {
-  width: var(--header-thumbnail-height);
-  height: var(--header-thumbnail-height);
-  margin: 1rem auto;
-  border-radius: 50%;
-  object-fit: cover;
-}
-
 .toolbar {
   width: 300px;
   grid-column-start: 2;
@@ -116,9 +108,11 @@
   transform: translateY(-50%);
 }
 
-.search .search-btn:focus+.search-result-container {}
+.search .search-btn:focus + .search-result-container {
+}
 
-.search .search-result-container:hover {}
+.search .search-result-container:hover {
+}
 
 .search .search-result-container {
   display: block;
@@ -135,7 +129,7 @@
 }
 
 .search .search-result-container::before {
-  content: "";
+  content: '';
   width: 100%;
   height: 8px;
   position: absolute;
@@ -164,9 +158,11 @@
   border-radius: 50%;
 }
 
-.search .search-data .search-user__fullName {}
+.search .search-data .search-user__fullName {
+}
 
-.search .search-data .search-user__addFriendBtn {}
+.search .search-data .search-user__addFriendBtn {
+}
 
 /* group */
 
@@ -177,8 +173,8 @@
   padding: 1rem 0 1rem 1rem;
 }
 
-.groups .option {}
-
+.groups .option {
+}
 
 .groups .group-contacts {
   height: var(--toolbar-group-height);
@@ -266,11 +262,12 @@
   flex-direction: column;
 }
 
-.chat-box__content .chat-content__message~.chat-content__message {
+.chat-box__content .chat-content__message ~ .chat-content__message {
   margin-top: 4px;
 }
 
-.chat-content__message {}
+.chat-content__message {
+}
 
 .chat-content__message .chat-message__content {
   padding: 8px 16px;
@@ -296,15 +293,16 @@
   float: left;
 }
 
-.chat-content__message.guest .chat-message__thumbnail~.chat-message__content {
+.chat-content__message.guest .chat-message__thumbnail ~ .chat-message__content {
   margin-left: 4px;
 }
 
-.chat-content__message.guest+.chat-content__message.guest .chat-message__thumbnail {
+.chat-content__message.guest
+  + .chat-content__message.guest
+  .chat-message__thumbnail {
   /* display: none; */
   opacity: 0;
 }
-
 
 /* host message */
 .chat-content__message.host .chat-message__thumbnail {
@@ -316,7 +314,9 @@
 }
 
 /* chat context */
-.chat-content__message .chat-message__content:hover .chat-message__context-menu {
+.chat-content__message
+  .chat-message__content:hover
+  .chat-message__context-menu {
   display: flex;
 }
 
@@ -361,13 +361,14 @@
   flex-direction: row-reverse;
 }
 
-.chat-context-menu__child-item .context-menu-item__tooltip {}
+.chat-context-menu__child-item .context-menu-item__tooltip {
+}
 
-.chat-context-menu__item .m-icon-btn:hover~.context-menu-item__tooltip {
+.chat-context-menu__item .m-icon-btn:hover ~ .context-menu-item__tooltip {
   display: block;
 }
 
-.chat-context-menu__item .m-icon-btn:focus~.chat-context-menu__child-item {
+.chat-context-menu__item .m-icon-btn:focus ~ .chat-context-menu__child-item {
   display: flex;
 }
 
@@ -378,9 +379,12 @@
   left: 100%;
 }
 
-.chat-content__message.guest .chat-message__context-menu {}
+.chat-content__message.guest .chat-message__context-menu {
+}
 
-.chat-content__message.guest .chat-context-menu__item .chat-context-menu__child-item {
+.chat-content__message.guest
+  .chat-context-menu__item
+  .chat-context-menu__child-item {
   left: 100%;
   flex-direction: row;
 }
@@ -414,7 +418,6 @@
   border-radius: 0 0 var(--block-border-radius) var(--block-border-radius);
 }
 
-
 .chat-box__footer .chat-box__input::placeholder {
   line-height: 40px;
 }
@@ -422,7 +425,6 @@
 .chat-box__footer .chat-box-footer__icon {
   right: 8px;
   display: flex;
-
 }
 
 .chat-box-footer__icon .m-icon-btn:not(:last-child) {
@@ -438,13 +440,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid var(--wcag-border-color);
+  /* border-bottom: 1px solid var(--wcag-border-color); */
 }
-
-.option img {
-  width: 3px;
+.option-thumbnail {
+  margin-left: auto;
+  margin-right: auto;
 }
-
 .option ul li.option-click {
   border-radius: 50%;
   padding: 0.1rem 0.5rem;
@@ -479,7 +480,13 @@
   grid-column-start: 2;
   grid-column-end: 10;
 }
-
+.thumbnail {
+  width: var(--header-thumbnail-height);
+  height: var(--header-thumbnail-height);
+  margin: 1rem auto;
+  border-radius: 50%;
+  object-fit: cover;
+}
 /* responsive */
 @media (max-width: 800px) {
   .toolbar {
