--- a/static/css/message-page.css
+++ b/static/css/message-page.css
@@ -143,7 +143,8 @@
   left: 0;
 }
 
-.search .search-data {
+.search .search-data,
+.friend-item.search-data {
   width: 100%;
   height: 50px;
   display: flex;
@@ -153,12 +154,24 @@
   flex-wrap: nowrap;
 }
 
-.search .search-data .search-message {
+.friend-item.search-data {
+  padding: 4px;
+  border-bottom: 1px solid var(--wcag-border-color);
+}
+
+.friend-item.search-data:hover {
+  cursor: pointer;
+  background-color: rgb(218, 218, 218);
+}
+
+.search .search-data .search-message,
+.friend-item.search-data .search-message {
   flex: 1;
   text-align: center;
 }
 
-.search .search-data .search-user__thumbnail img {
+.search .search-data .search-user__thumbnail img,
+.friend-item.search-data .search-user__thumbnail img {
   width: 36px;
   height: 36px;
   border-radius: 50%;
@@ -166,7 +179,11 @@
 
 .search .search-data .search-user__fullName {}
 
+.friend-item.search-data .search-user__fullName {}
+
 .search .search-data .search-user__addFriendBtn {}
+
+.friend-item.search-data .search-user__addFriendBtn {}
 
 /* group */
 
