--- a/static/css/common.css
+++ b/static/css/common.css
@@ -1,4 +1,6 @@
-@import url(/css/animation.css);
+@import url(/css/base/animation.css);
+@import url(/css/base/button.css);
+@import url(/css/base/scrollbar.css);
 
 @font-face {
   font-family: Roboto;
@@ -45,15 +47,19 @@
   --wcag-background-color: #F7F7F7;
   --wcag-white-color: #FFF;
 
+  --btn-icon-color: #E6F1E4;
   --btn-primary-color: #50B83C;
   --btn-primary-hover-color: #5DC748;
   --btn-primary-press-color: #118044;
   --btn-primary-disabled-color: #7ebe71;
-  --btn-icon-color: #E6F1E4;
   --btn-danger-color: #E81E1E;
   --btn-danger-hover-color: #ef4848;
   --btn-danger-press-color: #bf1a1a;
   --btn-danger-disabled-color: #eb7272;
+  --btn-warning-color: #F7BB07;
+  --btn-warning-hover-color: #f8ca42;
+  --btn-warning-press-color: #c29205;
+  --btn-warning-disabled-color: #f7d87b;
 
   /* block variable */
   --block-border-radius: 8px;
@@ -122,10 +128,6 @@ input:focus {
   outline: none;
 }
 
-.center {
-  text-align: center;
-}
-
 .--text-ellipsis {
   white-space: nowrap;
   overflow: hidden;
@@ -136,42 +138,6 @@ input:focus {
   outline: unset;
   background-color: unset;
   border: unset;
-}
-
-/* button */
-.m-icon-btn {
-  border: unset;
-  outline: unset;
-  background-color: var(--wcag-white-color);
-  color: var(--wcag-secondary-text-color);
-  font-size: 1.2rem;
-  padding: 4px 8px;
-  cursor: pointer;
-}
-
-.m-icon-btn i {
-  display: flex;
-  align-items: center;
-}
-
-.m-icon-btn:hover {
-  opacity: 0.56;
-}
-
-/* scroll bar */
-.ctm-scroll-y {
-  overflow-y: auto;
-}
-
-.ctm-scroll-y::-webkit-scrollbar-thumb {
-  background-color: var(--wcag-secondary-text-color);
-  border: 4px solid transparent;
-  border-radius: 8px;
-  background-clip: padding-box;
-}
-
-.ctm-scroll-y::-webkit-scrollbar {
-  width: 16px;
 }
 
 .m-thumbnail {
