--- a/static/css/message-page.css
+++ b/static/css/message-page.css
@@ -209,6 +209,10 @@
   cursor: pointer;
 }
 
+.item.active {
+  background-color: var(--main-color-100);
+}
+
 .groups .item:not(:last-child) {
   border-bottom: 1px solid rgba(0, 0, 0, 0.25);
 }
