--- a/static/css/base/button.css
+++ b/static/css/base/button.css
@@ -248,7 +248,7 @@
   outline: unset;
   background-color: transparent;
   color: var(--wcag-secondary-text-color);
-  padding: 4px 8px;
+  padding: 8px 8px;
   cursor: pointer;
   font-size: 1rem;
 }
@@ -269,4 +269,10 @@
 
 .m-icon-btn.--danger {
   color: var(--btn-danger-color);
+}
+
+.m-icon-btn.active {
+  color: var(--btn-primary-color);
+  background-color: var(--main-color-50);
+  border-radius: 50%;
 }
