--- a/static/css/message-page.css
+++ b/static/css/message-page.css
@@ -229,6 +229,14 @@
   flex: 1;
 }
 
+.settings {
+  background: #ffffff;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  border-radius: var(--block-border-radius);
+  padding: 1rem;
+  flex: 1;
+}
+
 /* toolbar */
 .option {
   display: flex;
