style: fix some style

--- a/static/css/base/button.css
+++ b/static/css/base/button.css
@@ -8,7 +8,7 @@
   display: inline-block;
   height: 36px;
   border-radius: 4px;
-  font-weight: 500;
+  font-family: Roboto-medium;
   font-size: 14px;
   text-align: center;
   line-height: 36px;
