--- a/static/css/common.css
+++ b/static/css/common.css
@@ -135,6 +135,14 @@ input:focus {
   text-overflow: ellipsis;
 }
 
+.--text-ellipsis-2 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
 .--button-reset {
   outline: unset;
   background-color: unset;
