--- a/static/css/message-page.css
+++ b/static/css/message-page.css
@@ -73,7 +73,7 @@
   position: relative;
 }
 
-.search input {
+.search .search-input {
   padding: 8px 1rem;
   background: #ffffff;
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
@@ -90,12 +90,20 @@
   transform: translateY(-50%);
 }
 
-.search .search-btn:focus+.search-result-container {}
+.search .search-input:focus~.search-result-container {
+  display: block;
+}
 
-.search .search-result-container:hover {}
+.search .search-btn:focus+.search-result-container {
+  display: block;
+}
+
+.search .search-result-container:hover {
+  display: block;
+}
 
 .search .search-result-container {
-  display: block;
+  display: none;
   position: absolute;
   width: 100%;
   top: calc(100% + 8px);
@@ -154,7 +162,9 @@
 
 .friend-item.search-data .search-user__fullName {}
 
-.search-data .search-user__addFriendBtn {}
+.search-data .search-user__addFriendBtn {
+  display: flex;
+}
 
 .friend-item.search-data .search-user__addFriendBtn {
   display: flex;
