--- a/static/css/login-page.css
+++ b/static/css/login-page.css
@@ -116,3 +116,13 @@ input[type=number] {
   background-size: cover;
   background-position: center;
 }
+
+/* override */
+.page-middle-form .form-section .thumbnail-group div,
+.page-middle-form .form-section .thumbnail-group button {
+  margin-bottom: unset;
+}
+
+.vicp-wrap {
+  margin-bottom: auto !important;
+}
